[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/enemy_fairy.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[node name="EnemyFairy" type="KinematicBody2D"]
position = Vector2( 96, 40 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AreaSteal" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaSteal"]
shape = SubResource( 3 )

[node name="TimerTeleport" type="Timer" parent="."]

[node name="TimerSteal" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="AreaSteal" to="." method="_on_AreaSteal_area_entered"]
[connection signal="timeout" from="TimerTeleport" to="." method="_on_TimerTeleport_timeout"]
[connection signal="timeout" from="TimerSteal" to="." method="_on_TimerSteal_timeout"]
